# django-velocity

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.production.yml  docker-compose.yml  justfile  llms.txt  manage.py  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: docs.yml
apps/: __init__.py
apps/authentication/: __init__.py  adapters.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/authentication/emails/: password_reset_confirm.txt  password_reset_request.txt
apps/authentication/migrations/: 0001_initial.py
apps/authentication/tests/: test_auth_api.py  test_auth_services.py
apps/core/: __init__.py  api.py  consumers.py  exceptions.py  health.py  models.py  routing.py  services.py  types.py  utils.py
apps/permissions/: __init__.py  admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/permissions/tests/: factories.py  test_selectors.py  test_services.py
apps/security/: __init__.py  admin.py  apps.py  middleware.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
apps/security/migrations/: 0001_initial.py
apps/security/tests/: __init__.py  test_middleware.py  test_selectors.py  test_services.py  test_validators.py
apps/tasks/: __init__.py  apps.py  tasks.py
apps/theme/: apps.py
apps/theme/templates/: base.html
apps/users/: __init__.py  admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_api.py  test_selectors.py  test_services.py
config/: __init__.py  asgi.py  celery.py  env.py  urls.py  wsgi.py
config/django/: __init__.py  base.py  local.py  production.py  test.py
config/settings/: __init__.py  allauth.py  celery.py  channels.py  cors.py  email.py  guardian.py  jwt.py  rest_framework.py  security.py  tailwind.py  unfold.py
dockerfiles/local/: Dockerfile
dockerfiles/production/: Dockerfile
docs/: architecture.md  backups.md  celery.md  contributing.md  deployment.md  getting-started.md  index.md  security.md
docs/api/: authentication.md  index.md  users.md
locale/: README.md
scripts/: backup.sh  cleanup.sh  restore.sh
tests/: conftest.py  factories.py
